--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "jwt-decode": "^3.1.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
